--- a/styles.css
+++ b/styles.css
@@ -1,40 +1,72 @@
+/*
+    Paleta de color
+    https://coolors.co/0a1128-001f54-034078-1282a2-fefcfb
+*/
+
 *{  
     margin: auto;
-    padding: autp;
+    padding: auto;
     box-sizing: border-box;
 }
 
 h1{
-    background-color: rgb(199, 247, 255);
-    padding: 1em;
+    background-color: #0A1128;
+    padding: 2%;
     text-align: center; 
+    font-family: neplus,serif;
+    font-weight: 900;
+    font-style: normal;
+    font-size: 3em;
+    color: #1282A2;
+    text-shadow: 1px  0px 0px rgb(255, 255, 255),
+    0px  1px 0px rgb(255, 255, 255),
+   -1px  0px 0px rgb(255, 255, 255),
+    0px -1px 0px rgb(255, 255, 255);
 }
 
+
 main{
+    background: transparent url(images/fondo-main.jpg) repeat center;
     padding: 3em 0 ;
-    width: 80%;
-}
+    width: 100%;
+    height: 95%;}
 
 footer{
     text-align: center;
-    background-color: rgb(199, 247, 255);
-    padding: 3em;
+    background-color: #0A1128;
+    padding: 2%;
+    height: 3%;
+    color: #FEFCFB;
+    font-family: dazzle-unicase,sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 1.5em;
 }
 
 #buscar{
     border-radius: 1em;
-    height: 3em;
+    width: 40%;
+
+}
+input[type="text" i] {
+    padding: 1px 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 2em;
 }
 
-
 label{
-    font-size: 2em;
+    font-size: 2em; color: white;
+    margin-left: 10%;
+    font-family: dazzle-unicase,sans-serif;
+    font-weight: 700;
+    font-style: normal;
 }
 
 #buscarBtn{
     padding:  2em   ;
     color:transparent;
-    background: transparent url(images/buscar.png) no-repeat center;
+    background: transparent url(images/buscar.png) no-repeat center center;
+    margin-left: -4em;
 }
 
 #buscarBtn:hover{
@@ -43,20 +75,71 @@ label{
 
 #divClima{
     width: 50%;
-    border: solid 0.1em orange;
+    border: solid 0.1em transparent;
+    background-color: rgb(255, 255, 255);
     border-radius: 1em;
     padding: 1em;
     margin-top: 2em;
     margin-bottom: 5em;
+    
 }
 
-h2{
+h2, #temperatura{
     text-align: center;
     font-size: 3em;
+    font-family: dazzle-unicase,sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    color: #1282A2;
+}
+
+#temperatura{
+    margin-bottom: 0.5em;
+    border-bottom: none;
 }
 
 p{
-    font-size: 2em;
+    font-size: 1.5em;
     line-height:1.5em;
+    font-family: bicyclette,sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    border-bottom: solid 1px #0A1128;
 }
 
+li{
+    list-style: none;
+}
+
+@media screen and (max-width: 577px) {
+    label{
+        font-size: 1em;
+    }
+
+    #divClima{
+        width: 94%;
+    }
+
+    #buscar{
+        width: 50%;
+    }
+    
+    label{
+    margin-left: 3%;
+    padding: 2em 0 ;
+}
+
+    input[type="text" i] {
+        padding: 1px 20px;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-size: 1em;
+    }
+
+    #buscarBtn{
+        background: transparent url(images/buscar-mobile.png) no-repeat center center;
+    }
+
+    #buscarBtn:hover{
+        background: transparent url(images/buscar-hover-mobile.png) no-repeat center;
+    }
+}
